<resources>
    <string name="app_name" translatable="false">BlogBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="add_photo">Add photo</string>
    <string name="profile">Profile</string>

    <string name="signin">SignIn</string>
    <string name="not_have_an_account_sign_up">Not have an account ?  Sign up</string>
    <string name="signup">SignUp</string>
    <string name="create_profile">create profile</string>
    <string name="profile_button_logout">Sign Out</string>
    <string name="error_sign_in">Error sign in</string>

    <string name="username_is_empty">Username is empty</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="password_is_empty">Password_is_empty</string>
    <string name="confirm_password_is_empty">Confirm Password is empty</string>

    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="confirm_password">Confirm password</string>
    <string name="profile_image">Profile image</string>
    <string name="profile_edit_confirm">Confirm edit</string>
    <string name="error_create_user">Error create user</string>

    <string name="uploading_changes">"Uploading changes…"</string>
    <string name="uploading_photo">Uploading photo…</string>
    <string name="cant_open_gallery">Cannot open gallery</string>
    <string name="camera_app_not_found">Camera app not found.</string>
    <string name="application_not_found">The application to open the camera was not found.</string>

    <string name="error_occurred">An error occurred</string>

    <string name="post_message_comment_success">Posted comment</string>
    <string name="post_image">Post image</string>
    <string name="like_icon">Like icon</string>
    <string name="fav_icon">Fav icon</string>
    <string name="divider_line">Divider line</string>
    <string name="post_delete">Post deleted</string>

    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>

    <string name="comments">Comments</string>
    <string name="shared">Shared</string>

    <string name="divider_end">Divider end</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="icon_upload">Icon upload</string>
    <string name="take_photo">Take photo</string>
    <string name="open_gallery">Open gallery</string>
    <string name="gallery_app_error">An error occurred in gallery</string>

</resources>