<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.SetupProfileFragment">

    <ImageView
        android:id="@+id/iv_post_image"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_add_a_photo"
        app:layout_constraintDimensionRatio="H, 4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:inputType="textCapWords"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_post_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_upload_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue_light"
        android:src="@drawable/ic_cloud_upload"
        app:cardCornerRadius="50dp"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_description">

        <ImageView
            android:id="@+id/iv_upload"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/icon_upload"
            android:src="@drawable/ic_cloud_upload" />

        <TextView
            android:id="@+id/tv_upload"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:text="@string/upload"
            android:textColor="@color/black" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_take_photo"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="@dimen/size_default"
        android:text="@string/take_photo"
        app:cornerRadius="50dp"
        android:backgroundTint="@color/blue_light"
        app:layout_constraintEnd_toStartOf="@+id/btn_open_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_upload_photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_open_gallery"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="@dimen/size_default"
        android:text="@string/open_gallery"
        app:cornerRadius="50dp"
        android:backgroundTint="@color/blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_take_photo"
        app:layout_constraintTop_toBottomOf="@id/cv_upload_photo" />


</androidx.constraintlayout.widget.ConstraintLayout>